--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         <p id="texto2">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
       </div>
       <div class="div-btn-ft">
-        <button class="btn-ft" id="btn-ft-1">Simple Bookmarking</button>
+        <button class="btn-ft" id="btn-ft-1" style="color: black;">Simple Bookmarking</button>
         <button class="btn-ft" id="btn-ft-2">Speedy Searching</button>
         <button class="btn-ft" id="btn-ft-3">Easy Sharing</button>
       </div>
       <div class="linha">
-        <button class="btnLinha" data-value="1" id="btnLinha1"></button>
+        <button class="ativado" data-value="1" id="btnLinha1"></button>
         <button class="btnLinha" data-value="2" id="btnLinha2"></button>
         <button class="btnLinha" data-value="3" id="btnLinha3"></button>
       </div>
@@ -62,6 +62,34 @@
           <p><strong id="titleEvent">Bookmark in one click</strong></p>
           <p id="textEvent">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
           <span><button id="btnInfo">More Info</button></span>
+        </div>
+      </div>
+      <div>
+        <p id="titulo3">Download the extension</p>
+        <p id="texto3">We’ve got more browsers in the pipeline. Please do let us know if you’ve 
+          got a favourite you’d like us to prioritize.</p>
+        <div class="divCards">
+          <div class="cards">
+            <img src="./images/logo-chrome.svg" alt="Chrome">
+            <p class="tituloCard">Add to Chrome</p>
+            <p class="textoCard">Minimum version 62</p>
+            <img src="./images/bg-dots.svg" alt="dots">
+            <button class="btnCard">Add & Install extension</button>
+          </div>
+          <div class="cards">
+            <img src="./images/logo-firefox.svg" alt="Firefox">
+            <p class="tituloCard">Add to Firefox</p>
+            <p class="textoCard">Minimum version 55</p>
+            <img src="./images/bg-dots.svg" alt="dots">
+            <button class="btnCard">Add & Install extension</button>
+          </div>
+          <div class="cards">
+            <img src="./images/logo-opera.svg" alt="Opera">
+            <p class="tituloCard">Add to Opera</p>
+            <p class="textoCard">Minimum version 46</p>
+            <img src="./images/bg-dots.svg" alt="dots">
+            <button class="btnCard">Add & Install extension</button>
+          </div>
         </div>
       </div>
     </section>
