changing variable names

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </div>
     </header>
     <section>
-      <div class="bookmarkManager">
+      <div class="firstContent">
         <div class="left-bm">
-          <p id="titulo1"><strong>A Simple Bookmark Manager</strong></p>
-          <p id="texto1">A clean and simple interface to organize your favourite websites. Open a new 
+          <p id="titleFirstContent"><strong>A Simple Bookmark Manager</strong></p>
+          <p id="textFirstContent">A clean and simple interface to organize your favourite websites. Open a new 
             browser tab and see your sites load instantly. Try it for free.</p>
           <div class="btn-bm">
             <button id="btn-bm-left">Get it on Chrome</button>
@@ -42,9 +42,9 @@
           <img id="img-ilust" src="./images/illustration-hero.svg" alt="hero">
         </div>
       </div>
-      <div class="features">
-        <p id="titulo2"><strong>Features</strong></p>
-        <p id="texto2">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+      <div class="secondContent">
+        <p id="titleSecondContent"><strong>Features</strong></p>
+        <p id="textSecondContent">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
       </div>
       <div class="div-btn-ft">
         <button class="btn-ft" id="btn-ft-1" style="color: black;">Simple Bookmarking</button>
@@ -52,7 +52,7 @@
         <button class="btn-ft" id="btn-ft-3">Easy Sharing</button>
       </div>
       <div class="linha">
-        <button class="ativado" data-value="1" id="btnLinha1"></button>
+        <button class="activated" data-value="1" id="btnLinha1"></button>
         <button class="btnLinha" data-value="2" id="btnLinha2"></button>
         <button class="btnLinha" data-value="3" id="btnLinha3"></button>
       </div>
@@ -64,29 +64,29 @@
           <span><button id="btnInfo">More Info</button></span>
         </div>
       </div>
-      <div>
-        <p id="titulo3">Download the extension</p>
-        <p id="texto3">We’ve got more browsers in the pipeline. Please do let us know if you’ve 
+      <div class="content3">
+        <p id="title3"><strong>Download the extension</strong></p>
+        <p id="text3">We’ve got more browsers in the pipeline. Please do let us know if you’ve 
           got a favourite you’d like us to prioritize.</p>
         <div class="divCards">
           <div class="cards">
-            <img src="./images/logo-chrome.svg" alt="Chrome">
-            <p class="tituloCard">Add to Chrome</p>
-            <p class="textoCard">Minimum version 62</p>
+            <img class="imgCards" src="./images/logo-chrome.svg" alt="Chrome">
+            <p class="titleCards"><strong>Add to Chrome</strong></p>
+            <p class="textCards">Minimum version 62</p>
             <img src="./images/bg-dots.svg" alt="dots">
             <button class="btnCard">Add & Install extension</button>
           </div>
           <div class="cards">
-            <img src="./images/logo-firefox.svg" alt="Firefox">
-            <p class="tituloCard">Add to Firefox</p>
-            <p class="textoCard">Minimum version 55</p>
+            <img class="imgCards" src="./images/logo-firefox.svg" alt="Firefox">
+            <p class="titleCards"><strong>Add to Firefox</strong></p>
+            <p class="textCards">Minimum version 55</p>
             <img src="./images/bg-dots.svg" alt="dots">
             <button class="btnCard">Add & Install extension</button>
           </div>
           <div class="cards">
-            <img src="./images/logo-opera.svg" alt="Opera">
-            <p class="tituloCard">Add to Opera</p>
-            <p class="textoCard">Minimum version 46</p>
+            <img class="imgCards" src="./images/logo-opera.svg" alt="Opera">
+            <p class="titleCards"><strong>Add to Opera</strong></p>
+            <p class="textCards">Minimum version 46</p>
             <img src="./images/bg-dots.svg" alt="dots">
             <button class="btnCard">Add & Install extension</button>
           </div>
