--- a/index.html
+++ b/index.html
@@ -64,41 +64,41 @@
           <span><button id="btnInfo">More Info</button></span>
         </div>
       </div>
-      <div class="content3">
-        <p id="title3"><strong>Download the extension</strong></p>
-        <p id="text3">We’ve got more browsers in the pipeline. Please do let us know if you’ve 
+      <div class="thirdContent">
+        <p id="titleThirdContent"><strong>Download the extension</strong></p>
+        <p id="textThirdContent">We’ve got more browsers in the pipeline. Please do let us know if you’ve 
           got a favourite you’d like us to prioritize.</p>
         <div class="divCards">
           <div class="cards">
             <img class="imgCards" src="./images/logo-chrome.svg" alt="Chrome">
             <p class="titleCards"><strong>Add to Chrome</strong></p>
             <p class="textCards">Minimum version 62</p>
-            <img src="./images/bg-dots.svg" alt="dots">
-            <button class="btnCard">Add & Install extension</button>
+            <img class="dots" src="./images/bg-dots.svg" alt="dots">
+            <button class="btnCards">Add & Install extension</button>
           </div>
-          <div class="cards">
+          <div class="cards" id="secondCard">
             <img class="imgCards" src="./images/logo-firefox.svg" alt="Firefox">
             <p class="titleCards"><strong>Add to Firefox</strong></p>
             <p class="textCards">Minimum version 55</p>
-            <img src="./images/bg-dots.svg" alt="dots">
-            <button class="btnCard">Add & Install extension</button>
+            <img class="dots" src="./images/bg-dots.svg" alt="dots">
+            <button class="btnCards">Add & Install extension</button>
           </div>
-          <div class="cards">
+          <div class="cards" id="thirdCard">
             <img class="imgCards" src="./images/logo-opera.svg" alt="Opera">
             <p class="titleCards"><strong>Add to Opera</strong></p>
             <p class="textCards">Minimum version 46</p>
-            <img src="./images/bg-dots.svg" alt="dots">
-            <button class="btnCard">Add & Install extension</button>
+            <img class="dots" src="./images/bg-dots.svg" alt="dots">
+            <button class="btnCards">Add & Install extension</button>
           </div>
         </div>
       </div>
     </section>
   </main>
   <footer>
-    <p class="attribution">
+    <!-- <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Dev_freire</a>.
-    </p>
+    </p> -->
   </footer>
 </body>
 </html>
