--- a/index.html
+++ b/index.html
@@ -92,6 +92,42 @@
           </div>
         </div>
       </div>
+      <div class="fourthContent">
+        <p id="titleFourthContent"><strong>Frequently Asked Questions</strong></p>
+        <p id="textFourthContent">Here are some of our FAQs. If you have any other questions you’d like 
+          answered please feel free to email us.</p>
+        <div class="questions">
+          <div class="firstQuestion">
+            <div class="boxQuestions">
+              <p class="titleFirstQuestion">What is Bookmark?</p>
+              <img class="arrow" src="./images/icon-arrow.svg" alt="arrow">
+            </div>
+            <p class="textFirstQuestion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
+              justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.</p>
+          </div>
+          <div class="secondQuestion">
+            <div class="boxQuestions">
+              <p class="titleSecondQuestion">How can I request a new browser?</p>
+              <img class="arrow" src="./images/icon-arrow.svg" alt="arrow">
+            </div>
+            <p class="textSecondQuestion"></p>
+          </div>
+          <div class="thirdQuestion">
+            <div class="boxQuestions">
+              <p class="titleThirdQuestion">Is there a mobile app?</p>
+              <img class="arrow" src="./images/icon-arrow.svg" alt="arrow">
+            </div>
+            <p class="textThirdQuestion"></p>
+          </div>
+          <div class="fourthQuestion">
+            <div class="boxQuestions">
+              <p class="titleFourthQuestion">What about other Chromium browsers?</p>
+              <img class="arrow" src="./images/icon-arrow.svg" alt="arrow">
+            </div>
+            <p class="textFourthQuestion"></p>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
   <footer>
