--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               </button>
             </div>            
           </div>
-          <button id="moreInfo">More Info</button>
+          <button id="moreInfo"><p>More Info</p></button>
         </div>
       </section>
     </main>
