--- a/index.html
+++ b/index.html
@@ -215,18 +215,30 @@
     <footer>
       <section id="secondSection">
         <div class="contentSecondSection">
-          <p></p>
-          <p></p>
+          <p id="firstTextSecondSection">35,000+ already joined</p>
+          <p id="secondTextSecondSection">Stay up-to-date with what we’re doing</p>
           <div class="btnSecondSection">
-            <input type="email" placeholder="example@gmail.com">
-            <button>Contact Us</button>
+            <input type="email" placeholder="Enter your email adress" id="email">
+            <button id="contactUs">Contact Us</button>
           </div>
         </div>
       </section>
-     <p class="attribution">
+      <div class="secondContentSecondSection">
+        <div class="leftFooter">
+          <div><img src="./images/logo-bookmark.svg" alt="bookmark"></div>
+          <p>Features</p>
+          <p>Pricing</p>
+          <p>Contact</p>
+        </div>
+        <div class="rigthFooter">
+          <img src="./images/icon-facebook.svg" alt="facebook">
+          <img src="./images/icon-twitter.svg" alt="twitter">
+        </div>
+      </div>
+     <!-- <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Dev_freire</a>.
-    </p>
+    </p> -->
     </footer>
   </body>
 </html>
