--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
           <div class="imgLeftFooter">
             <img id="imgLeftFooterid" src="./images/logo-bookmark.svg" alt="bookmark">
           </div>
+        </div>
+        <div class="midFooter">
           <p class="textLeftFooter">Features</p>
           <p class="textLeftFooter">Pricing</p>
           <p class="textLeftFooter">Contact</p>
