--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <main>
-      <header>
+      <header class="header">
         <div class="left-header">
           <img src="./images/logo-bookmark.svg" alt="bookmark" />
         </div>
@@ -38,6 +38,14 @@
           <button class="btn-header login" translate="no">LOGIN</button>
         </div>
       </header>
+      <div class="headerHamburguer">
+        <div class="left-header">
+          <img src="./images/logo-bookmark.svg" alt="bookmark" />
+        </div>
+        <div class="hamburguer">
+          <img src="./images/icon-hamburger.svg" alt="hamburguer">
+        </div>
+      </div>
       <section>
         <div class="firstContent">
           <div class="left-bm">
