--- a/index.html
+++ b/index.html
@@ -79,16 +79,22 @@
           </p>
         </div>
         <div class="div-btn-ft">
-          <button class="btn-ft" id="btn-ft-1" style="color: black">
+          <div><div class="buttonsQuestions" id="div-btn-ft-1" style="display: flex; flex-direction: column;">
+            <button class="btn-ft" id="btn-ft-1" style="color: black">
             Simple Bookmarking
           </button>
-          <button class="btn-ft" id="btn-ft-2">Speedy Searching</button>
-          <button class="btn-ft" id="btn-ft-3">Easy Sharing</button>
+        </div>
+        <button class="activated" data-value="1" id="btnLinha1"></button></div>
+          <div><div class="buttonsQuestions" id="div-btn-ft-2">
+            <button class="btn-ft" id="btn-ft-2">Speedy Searching</button>
+          </div>
+          <button class="btnLinha" data-value="2" id="btnLinha2"></button></div>
+          <div><div class="buttonsQuestions" id="div-btn-ft-3">
+            <button class="btn-ft" id="btn-ft-3">Easy Sharing</button>
+          </div>
+          <button class="btnLinha" data-value="3" id="btnLinha3"></button></div>
         </div>
         <div class="linha">
-          <button class="activated" data-value="1" id="btnLinha1"></button>
-          <button class="btnLinha" data-value="2" id="btnLinha2"></button>
-          <button class="btnLinha" data-value="3" id="btnLinha3"></button>
         </div>
         <div class="txt">
           <div class="divLeftEvent">
