--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="pt-br" >
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,6 +26,7 @@
     </style>
   </head>
   <body>
+    <div class="tes"></div>
     <main>
       <header class="header">
         <div class="left-header">
@@ -79,17 +80,17 @@
           </p>
         </div>
         <div class="div-btn-ft">
-          <div><div class="buttonsEvent" id="div-btn-ft-1" style="display: flex; flex-direction: column;">
+          <div class="contentButtonsFt"><div class="buttonsEvent" id="div-btn-ft-1" style="display: flex; flex-direction: column;">
             <button class="btn-ft" id="btn-ft-1" style="color: black">
             Simple Bookmarking
           </button>
         </div>
         <button class="activated" data-value="1" id="btnLinha1"></button></div>
-          <div><div class="buttonsEvent" id="div-btn-ft-2">
+          <div class="contentButtonsFt"><div class="buttonsEvent" id="div-btn-ft-2">
             <button class="btn-ft" id="btn-ft-2">Speedy Searching</button>
           </div>
           <button class="btnLinha" data-value="2" id="btnLinha2"></button></div>
-          <div><div class="buttonsEvent" id="div-btn-ft-3">
+          <div class="contentButtonsFt"><div class="buttonsEvent" id="div-btn-ft-3">
             <button class="btn-ft" id="btn-ft-3">Easy Sharing</button>
           </div>
           <button class="btnLinha" data-value="3" id="btnLinha3"></button></div>
