--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -26,7 +25,7 @@
     </style>
   </head>
   <body>
-    <div class="eventClickHamburguer">
+    <div class="eventClickHamburguer" id="hamburguerActivated">
       <div class="eventHamburguer">
         <div class="eventTopHamburguer">
           <div class="eventTop">
@@ -49,7 +48,7 @@
     <main>
       <header class="header">
         <div class="left-header">
-          <img src="./images/logo-bookmark.svg" alt="bookmark" />
+          <img src="./images/logo-bookmark.svg" alt="bookmark"/>
         </div>
         <div class="right-header">
           <button class="btn-header">FEATURES</button>
@@ -58,12 +57,12 @@
           <button class="btn-header login" translate="no">LOGIN</button>
         </div>
       </header>
-      <div class="headerHamburguer">
-        <div class="left-header">
+      <div class="headerHamburguer" id="headerHamburguerId">
+        <div class="leftHeaderHambuerguer">
           <img src="./images/logo-bookmark.svg" alt="bookmark" />
         </div>
         <div class="hamburguer">
-          <img src="./images/icon-hamburger.svg" alt="hamburguer">
+          <img src="./images/icon-hamburger.svg" alt="hamburguer" id="hamburguerId">
         </div>
       </div>
       <section>
