--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
       </header>
       <div class="headerHamburguer" id="headerHamburguerId">
-        <div class="leftHeaderHambuerguer">
+        <div class="leftHeaderHamburguer">
           <img src="./images/logo-bookmark.svg" alt="bookmark" />
         </div>
         <div class="hamburguer">
