--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
               src="./images/illustration-hero.svg"
               alt="hero"
             />
+            <div class="backgroundBlueRigth"></div>
           </div>
         </div>
         <div class="secondContent">
@@ -120,6 +121,7 @@
               src="./images/illustration-features-tab-1.svg"
               alt=""
             />
+            <div class="backgroundBlueleft"></div>
           </div>
           <div class="divRightEvent">
             <p id="titleEvent"><strong >Bookmark in one click</strong></p>
